added passport configuration with google auth
